; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/extr_builtin-trace.c_trace__fprintf_threads_header.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/extr_builtin-trace.c_trace__fprintf_threads_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [73 x i8] c"\0A _____________________________________________________________________\0A\00", align 1
@.str.1 = private unnamed_addr constant [35 x i8] c" __)    Summary of events    (__\0A\0A\00", align 1
@.str.2 = private unnamed_addr constant [68 x i8] c"              [ task - pid ]     [ events ] [ ratio ]  [ runtime ]\0A\00", align 1
@.str.3 = private unnamed_addr constant [73 x i8] c" _____________________________________________________________________\0A\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*)* @trace__fprintf_threads_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @trace__fprintf_threads_header(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @fprintf(i32* %4, i8* getelementptr inbounds ([73 x i8], [73 x i8]* @.str, i64 0, i64 0))
  store i64 %5, i64* %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i64 @fprintf(i32* %6, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0))
  %8 = load i64, i64* %3, align 8
  %9 = add i64 %8, %7
  store i64 %9, i64* %3, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = call i64 @fprintf(i32* %10, i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.2, i64 0, i64 0))
  %12 = load i64, i64* %3, align 8
  %13 = add i64 %12, %11
  store i64 %13, i64* %3, align 8
  %14 = load i32*, i32** %2, align 8
  %15 = call i64 @fprintf(i32* %14, i8* getelementptr inbounds ([73 x i8], [73 x i8]* @.str.3, i64 0, i64 0))
  %16 = load i64, i64* %3, align 8
  %17 = add i64 %16, %15
  store i64 %17, i64* %3, align 8
  %18 = load i64, i64* %3, align 8
  ret i64 %18
}

declare dso_local i64 @fprintf(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
